added footer section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </section>
 
     <!-- My-Section Start -->
-    <section class="my-section">
+    <section class="my-section">       
         <div class="my-img-section">
             <img src="images/person.png" alt="parson" srcset="">
         </div>
@@ -71,18 +71,18 @@
             </div>
             <div class="my-plan">
                 <img class="my-plan-img" src="images/icons/smoke.png" alt="" srcset="">
-                <h3 class="my-pian-title">Web Development</h3>
-                <p class="my-plan-para">I Went To Start</p>
+                <h3 class="my-pian-title">JavaScript</h3>
+                <p class="my-plan-para">I Went To Learn</p>
             </div>
             <div class="my-plan">
                 <img class="my-plan-img" src="images/icons/ecom.png" alt="" srcset="">
-                <h3 class="my-pian-title">Web Development</h3>
-                <p class="my-plan-para">I Went To Start</p>
+                <h3 class="my-pian-title">Smoking Habit</h3>
+                <p class="my-plan-para">I Went to End </p>
             </div>
             <div class="my-plan">
                 <img class="my-plan-img" src="images/icons/web.png" alt="" srcset="">
-                <h3 class="my-pian-title">Web Development</h3>
-                <p class="my-plan-para">I Went To Start</p>
+                <h3 class="my-pian-title">Ecommerce</h3>
+                <p class="my-plan-para">I Went To Develop</p>
             </div>
         </section>
         <div class="sub-bg">
