some tag and style added

--- a/index.html
+++ b/index.html
@@ -36,80 +36,107 @@
     </section>
 
     <!-- My-Section Start -->
-    <section class="my-section">       
+    <div class="my-plan-title">My Failures</div>
+
+    <section class="my-section">
         <div class="my-img-section">
-            <img src="images/person.png" alt="parson" srcset="">
+            <img src="images/person.png" alt="parson" srcset="" />
         </div>
         <div class="my-desc-section">
-            <div class="my-desc-title">
-                My failures of <br> previous year
+            <div class="my-desc-title ">
+                My failures of 
+                previous year
             </div>
             <p class="my-desc-pera">
-                Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots in a piece of <br>
-                classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.
+                Contrary to popular belief, Lorem Ipsum is not <br />
+                simply random text. It has roots in a piece of <br />
+                classical Latin literature from 45 BC, making it over <br />
+                2000 years old. Richard McClintock.
             </p>
             <ul>
-                <li><i class="fa-solid fa-check" class="list-icon"></i> Contrary to popular belief, is not simply</li>
-                <li> <i class="fa-solid fa-check" class="list-icon"></i>Contrary to popular belief.</li>
-                <li><i class="fa-solid fa-check" class="list-icon"></i> Contrary to popular , is not simply.</li>
-                <li><i class="fa-solid fa-check" class="list-icon"></i> Contrary to popular belief, is not simply</li>
-                <li><i class="fa-solid fa-check" class="list-icon"></i> Contrary to popular simply</li>
+                <li>
+                    <i class="fa-solid fa-check" class="list-icon"></i> Contrary to
+                    popular belief, is not simply
+                </li>
+                <li>
+                    <i class="fa-solid fa-check" class="list-icon"></i>Contrary to
+                    popular belief.
+                </li>
+                <li>
+                    <i class="fa-solid fa-check" class="list-icon"></i> Contrary to
+                    popular , is not simply.
+                </li>
+                <li>
+                    <i class="fa-solid fa-check" class="list-icon"></i> Contrary to
+                    popular belief, is not simply
+                </li>
+                <li>
+                    <i class="fa-solid fa-check" class="list-icon"></i> Contrary to
+                    popular simply
+                </li>
             </ul>
         </div>
     </section>
-    
+
     <div class="main">
-        <div class="my-desc-title , my-plan-title">
-           My Plans
-         </div>
+        <div class=" my-plan-title">My Plans</div>
         <section class="my-plans">
-           
             <div class="my-plan">
-                <img class="my-plan-img" src="images/icons/js.png" alt="" srcset="">
+                <img class="my-plan-img" src="images/icons/js.png" alt="" srcset="" />
                 <h3 class="my-pian-title">Web Development</h3>
                 <p class="my-plan-para">I Went To Start</p>
             </div>
             <div class="my-plan">
-                <img class="my-plan-img" src="images/icons/smoke.png" alt="" srcset="">
+                <img class="my-plan-img" src="images/icons/smoke.png" alt="" srcset="" />
                 <h3 class="my-pian-title">JavaScript</h3>
                 <p class="my-plan-para">I Went To Learn</p>
             </div>
             <div class="my-plan">
-                <img class="my-plan-img" src="images/icons/ecom.png" alt="" srcset="">
+                <img class="my-plan-img" src="images/icons/ecom.png" alt="" srcset="" />
                 <h3 class="my-pian-title">Smoking Habit</h3>
-                <p class="my-plan-para">I Went to End </p>
+                <p class="my-plan-para">I Went to End</p>
             </div>
             <div class="my-plan">
-                <img class="my-plan-img" src="images/icons/web.png" alt="" srcset="">
+                <img class="my-plan-img" src="images/icons/web.png" alt="" srcset="" />
                 <h3 class="my-pian-title">Ecommerce</h3>
                 <p class="my-plan-para">I Went To Develop</p>
             </div>
         </section>
         <div class="sub-bg">
-            <h2 class="sub-bg-title">Awlays keep a positive <br> mindset</h2>
+            <h2 class="sub-bg-title">
+                Awlays keep a positive <br />
+                mindset
+            </h2>
             <button class="sub-bg-btn">Call Now</button>
         </div>
     </div>
     <footer>
         <div class="main-footer">
             <div class="footer-left">
-            <h2 class="footer-title">Future</h2>
-            <p class="footer-desc">There are many variations of passages of Lorem <br> Ipsum available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p><br>
-            <p class="footer-desc">Email : info@gmail.com</p><br>
-            <p class="footer-desc">Phone : 01500 00 00 00</p><br>
-            <div class="footer-img">
-               <a href=""> <img src="images/icons/fb.png" alt="" srcset=""></a>
-               <a href=""> <img src="images/icons/twitter.png" alt="" srcset=""></a>
-               <a href=""><img src="images/icons/youtube.png" alt="" srcset=""></a>
-            </div>
-
+                <h2 class="footer-title">Future</h2>
+                <p class="footer-desc">
+                    There are many variations of passages of Lorem <br />
+                    Ipsum available, but the majority have suffered alteration in some
+                    <br />
+                    form, by injected humour, or randomised words
+                </p>
+                <br />
+                <p class="footer-desc">Email : info@gmail.com</p>
+                <br />
+                <p class="footer-desc">Phone : 01500 00 00 00</p>
+                <br />
+                <div class="footer-img">
+                    <a href=""> <img src="images/icons/fb.png" alt="" srcset="" /></a>
+                    <a href="">
+                        <img src="images/icons/twitter.png" alt="" srcset="" /></a>
+                    <a href=""><img src="images/icons/youtube.png" alt="" srcset="" /></a>
+                </div>
             </div>
             <div class="footer-right">
                 <h2 class="footer-right-title">Subscribe</h2>
-                <input type="text" name="" id="footer-id" placeholder="Enter Your Email"> <br>
-                <button class="subscribe">
-                    Subscribe
-                </button>
+                <input type="text" name="" id="footer-id" placeholder="Enter Your Email" />
+                <br />
+                <button class="subscribe">Subscribe</button>
             </div>
         </div>
     </footer>
