added Team section

--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
             <img src="images/person.png" alt="parson" srcset="" />
         </div>
         <div class="my-desc-section">
-            <div class="my-desc-title ">
-                My failures of 
-                previous year
-            </div>
+            <div class="my-desc-title">My failures of previous year</div>
             <p class="my-desc-pera">
                 Contrary to popular belief, Lorem Ipsum is not <br />
                 simply random text. It has roots in a piece of <br />
@@ -77,9 +74,12 @@
             </ul>
         </div>
     </section>
-
+    <!-- Main Section Start -->
     <div class="main">
-        <div class=" my-plan-title">My Plans</div>
+
+
+
+        <div class="my-plan-title">My Plans</div>
         <section class="my-plans">
             <div class="my-plan">
                 <img class="my-plan-img" src="images/icons/js.png" alt="" srcset="" />
@@ -110,6 +110,47 @@
             <button class="sub-bg-btn">Call Now</button>
         </div>
     </div>
+
+    <!-- Team Section Start -->
+    <div class="my-plan-title">Our Team</div>
+    <section class="teams">
+        
+        <div class="team-left">
+            <div class="team-left_1">
+                <div class="team-person">
+                    <img src="images/person/person1.jpg" alt="" class="team-img">
+                    <h3>Alex Resonded</h3>
+                    <h4>Web Developer</h4>
+                </div>
+                <div class="team-person">
+                    <img src="images/person/person1.jpg" alt="" class="team-img">
+                    <h3>Alex Resonded</h3>
+                    <h4>Web Developer</h4>
+                </div>
+            </div>
+            <div class="team-left_2">
+                <div class="team-person">
+                    <img src="images/person/person1.jpg" alt="" class="team-img">
+                    <h3>Alex Resonded</h3>
+                    <h4>Web Developer</h4>
+                </div>
+                <div class="team-person">
+                    <img src="images/person/person1.jpg" alt="" class="team-img">
+                    <h3>Alex Resonded</h3>
+                    <h4>Web Developer</h4>
+                </div>
+            </div>
+        </div>
+        <div class="team-right">
+            <h1>Our Team Members</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem, laudantium?</p><br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing <br> Eum, tenetur odit consequuntur temporibus quidem suscipit  <br>cum fugiat iste corporis voluptatibus, <br> neque saepe dicta molestiae, perspiciatis optio ad quaerat animi libero debitis velit recusandae? <br> Sequi nobis autem repellendus cumque consequatur vel!  <br>Nulla neque magnam cumque ipsum ipsam corrupti perspiciatis sed fugit!</p><br>
+            <button class="contuct-us">Contuct Us </button>
+
+        </div>
+    </section>
+    <!-- Team Section End -->
+
     <footer>
         <div class="main-footer">
             <div class="footer-left">
