Some style addd

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </p>
         <button class="btn-primary">Contect Us</button>
     </section>
+    <!-- Banner Section End -->
 
     <!-- My-Section Start -->
     <div class="my-plan-title">My Failures</div>
@@ -74,6 +75,8 @@
             </ul>
         </div>
     </section>
+    <!-- My Section End -->
+
     <!-- Main Section Start -->
     <div class="main">
 
@@ -110,47 +113,76 @@
             <button class="sub-bg-btn">Call Now</button>
         </div>
     </div>
+    <!-- Main Section End -->
 
     <!-- Team Section Start -->
     <div class="my-plan-title">Our Team</div>
     <section class="teams">
-        
+
         <div class="team-left">
             <div class="team-left_1">
                 <div class="team-person">
                     <img src="images/person/person1.jpg" alt="" class="team-img">
                     <h3>Alex Resonded</h3>
-                    <h4>Web Developer</h4>
+                    <h4>JS Developer</h4>
+                    <div class="card-img">
+                        <a href=""> <img src="images/icons/fb.png" alt="" srcset="" class='' /></a>
+                        <a href="">
+                            <img src="images/icons/twitter.png" alt="" srcset="" /></a>
+                        <a href=""><img src="images/icons/youtube.png" alt="" srcset="" /></a>
+                    </div>
                 </div>
                 <div class="team-person">
-                    <img src="images/person/person1.jpg" alt="" class="team-img">
-                    <h3>Alex Resonded</h3>
-                    <h4>Web Developer</h4>
+                    <img src="images/person/person2.jpg" alt="" class="team-img">
+                    <h3>Jefryy Broun</h3>
+                    <h4>PHP Developer</h4>
+                    <div class="card-img">
+                        <a href=""> <img src="images/icons/fb.png" alt="" srcset="" class='' /></a>
+                        <a href="">
+                            <img src="images/icons/twitter.png" alt="" srcset="" /></a>
+                        <a href=""><img src="images/icons/youtube.png" alt="" srcset="" /></a>
+                    </div>
                 </div>
             </div>
             <div class="team-left_2">
                 <div class="team-person">
-                    <img src="images/person/person1.jpg" alt="" class="team-img">
-                    <h3>Alex Resonded</h3>
-                    <h4>Web Developer</h4>
+                    <img src="images/person/person3.jpg" alt="" class="team-img">
+                    <h3>Connor Qunin</h3>
+                    <h4>Softower Developer</h4>
+                    <div class="card-img">
+                        <a href=""> <img src="images/icons/fb.png" alt="" srcset="" class='' /></a>
+                        <a href="">
+                            <img src="images/icons/twitter.png" alt="" srcset="" /></a>
+                        <a href=""><img src="images/icons/youtube.png" alt="" srcset="" /></a>
+                    </div>
                 </div>
                 <div class="team-person">
-                    <img src="images/person/person1.jpg" alt="" class="team-img">
-                    <h3>Alex Resonded</h3>
+                    <img src="images/person/sohan.png" alt="" class="team-img">
+                    <h3>MS Sohan</h3>
                     <h4>Web Developer</h4>
+                    <div class="card-img">
+                        <a href=""> <img src="images/icons/fb.png" alt="" srcset="" class='' /></a>
+                        <a href="">
+                            <img src="images/icons/twitter.png" alt="" srcset="" /></a>
+                        <a href=""><img src="images/icons/youtube.png" alt="" srcset="" /></a>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="team-right">
             <h1>Our Team Members</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem, laudantium?</p><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing <br> Eum, tenetur odit consequuntur temporibus quidem suscipit  <br>cum fugiat iste corporis voluptatibus, <br> neque saepe dicta molestiae, perspiciatis optio ad quaerat animi libero debitis velit recusandae? <br> Sequi nobis autem repellendus cumque consequatur vel!  <br>Nulla neque magnam cumque ipsum ipsam corrupti perspiciatis sed fugit!</p><br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing <br> Eum, tenetur odit consequuntur temporibus quidem
+                suscipit <br>cum fugiat iste corporis voluptatibus, <br> neque saepe dicta molestiae, perspiciatis optio
+                ad quaerat animi libero debitis velit recusandae? <br> Sequi nobis autem repellendus cumque consequatur
+                vel! <br>Nulla neque magnam cumque ipsum ipsam corrupti perspiciatis sed fugit!</p><br>
             <button class="contuct-us">Contuct Us </button>
 
         </div>
     </section>
     <!-- Team Section End -->
 
+    <!-- footer Section Start  -->
     <footer>
         <div class="main-footer">
             <div class="footer-left">
@@ -181,6 +213,7 @@
             </div>
         </div>
     </footer>
+    <!-- Footer Section End -->
 </body>
 
 </html>
